feat: Sequelize create + seed > scripts package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "db:create": "node ./src/migrations/01.createTables.js",
+    "db:seed": "node ./src/migrations/02.seedTables.js",
+    "db:reset": "pnpm db:create && pnpm db:seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
