--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "node --watch index.js", 
     "db:create": "node ./src/migrations/01.createTables.js",
     "db:seed": "node ./src/migrations/02.seedTables.js",
     "db:reset": "pnpm db:create && pnpm db:seed",
@@ -15,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "pg": "^8.11.3",
     "sequelize": "^6.37.1"
   }
