--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch index.js", 
+    "dev": "node --watch index.js",
     "db:create": "node ./src/migrations/01.createTables.js",
     "db:seed": "node ./src/migrations/02.seedTables.js",
     "db:reset": "pnpm db:create && pnpm db:seed",
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "pg": "^8.11.3",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "swagger-ui-express": "^5.0.0"
   }
 }
